<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_panel"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="@dimen/pay_top_panel_merginleft"
    android:layout_weight="1.5" >

    <!-- title -->

    <RelativeLayout
        android:id="@+id/panel_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6" >

        <TextView
            android:id="@+id/videotitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="归来"
            android:textSize="@dimen/pay_top_panel_videotitle_textsieze" />

        <TextView
            android:id="@+id/panel_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/pay_panel_label"
            android:textSize="@dimen/pay_top_panel_panel_label_textsieze" />
    </RelativeLayout>

    <!-- top login panel -->

    <RelativeLayout
        android:id="@+id/top_login_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4" >

        <Button
            android:id="@+id/top_login"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pay_channel_weixin_height"
            android:layout_marginTop="18dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/person_btn_selector"
            android:text="@string/pay_top_login_label"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/pay_top_panel_top_login_textsieze" />

        <TextView
            android:id="@+id/warntitle"
            android:layout_centerHorizontal="true"
            android:layout_width="470dp"
            android:layout_marginTop="35dp"
            android:layout_below="@id/top_login"
            android:layout_height="wrap_content"
            android:text="@string/pay_warntitle"
            android:lineSpacingExtra="5dp"
            android:textColor="#fe8109"
            android:textSize="@dimen/pay_top_panel_warntitle_textsieze" />
    </RelativeLayout>

    <TextView
        android:id="@+id/welocome_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_weight="4"
        android:gravity="right"
        android:text="@string/welocome_tip"
        android:textSize="@dimen/pay_top_panel_welocome_tip_textsieze"
        android:visibility="gone" />

</LinearLayout>