<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/popup_bg_yellow"
              android:layout_width="match_parent"
              android:gravity="center"
              android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:text="@string/exit_prompt"
            android:textSize="28sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="80dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <Button
                android:layout_marginRight="30dp"
                android:background="@drawable/selector_daisy_button"
                android:textSize="28sp"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:id="@+id/confirm_exit"
                android:layout_width="@dimen/launcher_exit_button_width"
                android:layout_height="60dp"/>

            <Button
                android:layout_marginLeft="30dp"
                android:background="@drawable/selector_daisy_button"
                android:textSize="28sp"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:id="@+id/cancel_exit"
                android:layout_width="@dimen/launcher_exit_button_width"
                android:layout_height="60dp"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>